# AKKO

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml  pyrightconfig.json  requirements-dev.in  requirements.txt  ruff.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  bug.yml  config.yml  credentials-issue.md  credentials.yml  documentation-update.md  documentation.yml  feature-request.md  feature_request.yml  frontend-issue.md  frontend.yml  general-question.md  general.yml
.github/PULL_REQUEST_TEMPLATE/: bugfix.md  documentation.md  feature.md  issue-maintenance.md  repo-settings.md
.streamlit/: config.toml
docs/adr/: 0001-use-pydantic-v2.md  0002-use-orjson-for-serialization.md  0003-encryption-decryotion.md  0004-streamlit-component-structure.md
src/akko/: __init__.py  config_loader.py  credentials_list.py  credentials_manage.py  helpers.py  launcher.py  links_page.py  logging.py  security.py  settings.py
src/akko/core/: security.py
src/akko/front/: __init__.py  app.py  credentials_list.py  credentials_manage.py  helpers.py  links_page.py
src/akko/resources/: app.css  config.json  credentials.css  default-config.json
src/akko/typing/: credentials.py  security.py
tests/: conftest.py
tests/unit/: test_launcher.py  test_logging.py  test_settings.py
tests/unit/core/: test_security.py
tests/unit/front/: test_app.py  test_credentials_list.py  test_credentials_manage.py  test_helpers.py  test_links_page.py
tests/unit/typing/: test_credentials.py  test_security.py
